Add video generation scripts and update .gitignore; remove obsolete write_roughness.py

--- a/source/animation/test_viz.ipynb
+++ b/source/animation/test_viz.ipynb
@@ -1240,7 +1240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mamba_josh",
    "language": "python",
    "name": "python3"
   },
